Added dots visualization

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <title>My Title</title>
+    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>My Webpage</h1>
+    <div class="visual">
+        <h2>Ebola Virus in 2014</h2>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
