Updated title of page

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="visual">
-        <h2>Ebola Virus in 2014</h2>
+        <h1>The Ebola Virus</h1>
     </div>
     <script src="./index.js"></script>
   </body>
