added color change on click

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="visual">
         <h1>The Ebola Virus</h1>
+        <div class="selectors"></div>
     </div>
     <script src="./index.js"></script>
   </body>
