--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
   <body>
     <div class="visual">
         <h1>The Ebola Virus</h1>
-        <div class="selectors"></div>
+        <div class="gender"></div>
+        <div class="age-groups"></div>
     </div>
     <script src="./index.js"></script>
   </body>
