Formatting of legend

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,18 @@
         <div class="gender"></div>
         <div class="age-groups"></div>
     </div>
+    <div id="filters">
+        <fieldset>
+            <legend>Filters</legend>
+            <input type="radio" name="filter" id="gender">
+            <label for="gender">Gender</label><br/>
+
+            <input type="radio" name="filter" id="age-group">
+            <label for="age-group">Age Group</label><br/>
+            
+            <button type="button">Clear filters</button>
+        </fieldset>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
