--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
         <h1>The Ebola Virus</h1>
         <div class="gender"></div>
         <div class="age-groups"></div>
+        <div class="countries"></div>
     </div>
     <div id="filters">
         <fieldset>
@@ -20,7 +21,10 @@
 
             <input type="radio" name="filter" id="age-group">
             <label for="age-group">Age Group</label><br/>
-            
+      
+            <input type="radio" name="filter" id="countries">
+            <label for="countries">Countries</label><br/>
+
             <button type="button">Clear filters</button>
         </fieldset>
     </div>
