Subfilters for gender, age, and country

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,42 @@
             <button type="button">Clear filters</button>
         </fieldset>
     </div>
+    <div id="subfilter-gender">
+        <fieldset>
+            <legend>Subfilters</legend>
+            <input type="checkbox" class="subfilter-gender" id="male" checked>
+            <label for="male">Male</label><br/>
+
+            <input type="checkbox" class="subfilter-gender" id="female" checked>
+            <label for="female">Female</label><br/>
+        </fieldset>
+    </div>
+    <div id="subfilter-age">
+        <fieldset>
+            <legend>Subfilters</legend>
+            <input type="checkbox" class="subfilter-age" id="age0-14" checked>
+            <label for="age0-14">Ages 0-14</label><br/>
+
+            <input type="checkbox" class="subfilter-age" id="age15-44" checked>
+            <label for="age15-44">Ages 15-44</label><br/>
+
+            <input type="checkbox" class="subfilter-age" id="age44-and-up" checked>
+            <label for="age44-and-up">Ages 44+</label><br/>
+        </fieldset>
+    </div>
+    <div id="subfilter-country">
+        <fieldset>
+            <legend>Subfilters</legend>
+            <input type="checkbox" class="subfilter-country" id="guinea" checked>
+            <label for="guinea">Guinea</label><br/>
+
+            <input type="checkbox" class="subfilter-country" id="liberia" checked>
+            <label for="liberia">Liberia</label><br/>
+
+            <input type="checkbox" class="subfilter-country" id="sierraLeone" checked>
+            <label for="sierraLeone">Sierra Leone</label><br/>
+        </fieldset>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
