add color legend

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,12 @@
             <button type="button">Clear filters</button>
         </fieldset>
     </div>
+    <div id="color-legend">
+      <fieldset>
+          <legend>Color Legend</legend>
+          <div id = "colors"></div>
+      </fieldset>
+  </div>
     <script src="./index.js"></script>
   </body>
 </html>
