Trying to resolve merge conflicts

--- a/src/index.html
+++ b/src/index.html
@@ -25,14 +25,12 @@
             <button type="button">Clear filters</button>
         </fieldset>
     </div>
-<!-- <<<<<<< HEAD
-    <div id="color-legend">
+    <!-- <div id="color-legend">
       <fieldset>
           <legend>Color Legend</legend>
-          <div id = "colors"></div>
+          <div id="colors"></div>
       </fieldset>
-  </div>
-======= -->
+    </div> -->
     <div id="subfilter-gender">
         <fieldset>
             <legend>Subfilters</legend>
@@ -69,7 +67,6 @@
             <label for="sierraLeone">Sierra Leone</label><br/>
         </fieldset>
     </div>
->>>>>>> dfc2fdc10a8e62e0a1cde937eaea79c7a77ee63b
     <script src="./index.js"></script>
   </body>
 </html>
