--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,10 @@
         <fieldset>
             <legend>Subfilters</legend>
             <input type="checkbox" class="subfilter-gender" id="male" checked>
-            <label for="male">Male</label><br/>
+            <label for="male" style="color: #4682b4">Male</label><br/>
 
             <input type="checkbox" class="subfilter-gender" id="female" checked>
-            <label for="female">Female</label><br/>
+            <label for="female" style="color: #db7093">Female</label><br/>
         </fieldset>
     </div>
     <div id="subfilter-age">
@@ -66,6 +66,17 @@
             <input type="checkbox" class="subfilter-country" id="sierraLeone" checked>
             <label for="sierraLeone">Sierra Leone</label><br/>
         </fieldset>
+    </div>
+    <div id="people-legend">
+      <fieldset>
+          <legend>Legend</legend>
+          <div>
+              <svg height="22" width="22">
+                  <circle cx="10" cy="14" r="8" fill="gray" />
+              </svg>
+              <div style="display: inline">100 people</div>
+          </div>
+      </fieldset>
     </div>
     <script src="./index.js"></script>
   </body>
