Legend for unknown data

--- a/src/index.html
+++ b/src/index.html
@@ -71,10 +71,16 @@
       <fieldset>
           <legend>Legend</legend>
           <div>
-              <svg height="22" width="22">
-                  <circle cx="10" cy="14" r="8" fill="gray" />
+              <svg height="25" width="22">
+                  <ellipse cx="10" cy="16" rx="8" ry="8" stroke="black" fill="white" />
               </svg>
               <div style="display: inline">100 people</div>
+          </div>
+          <div>
+              <svg height="24" width="22">
+                  <circle cx="10" cy="16" r="8" fill="gray" />
+              </svg>
+              <div style="display: inline">Unknown data</div>
           </div>
       </fieldset>
     </div>
