added colors to subfilters

--- a/src/index.html
+++ b/src/index.html
@@ -29,44 +29,60 @@
         <fieldset>
             <legend>Subfilters</legend>
             <input type="checkbox" class="subfilter-gender" id="male" checked>
-            <label for="male">Male</label><br/>
+            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#4682b4"/></svg>
+            <label for="male">Male</label>            
+            <br/> 
 
             <input type="checkbox" class="subfilter-gender" id="female" checked>
-            <label for="female">Female</label><br/>
+            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#db7093"/></svg>
+            <label for="female">Female</label>            
+            <br/>
         </fieldset>
     </div>
     <div id="subfilter-age">
         <fieldset>
             <legend>Subfilters</legend>
             <input type="checkbox" class="subfilter-age" id="age0-14" checked>
-            <label for="age0-14">Ages 0-14</label><br/>
+            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#9e6ebd"/></svg>
+            <label for="age0-14">Ages 0-14</label>
+            <br/>
 
             <input type="checkbox" class="subfilter-age" id="age15-44" checked>
-            <label for="age15-44">Ages 15-44</label><br/>
+            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#7aa457"/></svg>
+            <label for="age15-44">Ages 15-44</label>
+            <br/>
 
             <input type="checkbox" class="subfilter-age" id="age44-and-up" checked>
-            <label for="age44-and-up">Ages 44+</label><br/>
+            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#cb6751"/></svg>
+            <label for="age44-and-up">Ages 44+</label>            
+            <br/>
         </fieldset>
     </div>
     <div id="subfilter-country">
         <fieldset>
             <legend>Subfilters</legend>
             <input type="checkbox" class="subfilter-country" id="guinea" checked>
-            <label for="guinea">Guinea</label><br/>
+            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#ffa600"/></svg>
+            <label for="guinea">Guinea</label>            
+            <br/>
 
             <input type="checkbox" class="subfilter-country" id="liberia" checked>
-            <label for="liberia">Liberia</label><br/>
+            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#bc5090"/></svg>
+            <label for="liberia">Liberia</label>            
+            <br/>
 
             <input type="checkbox" class="subfilter-country" id="sierraLeone" checked>
-            <label for="sierraLeone">Sierra Leone</label><br/>
+            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#374c80"/></svg>
+            <label for="sierraLeone">Sierra Leone</label>
+            <br/>
         </fieldset>
     </div>
-    <div id="color-legend">
+    <!-- <div id="color-legend">
       <fieldset>
           <legend>Color Legend</legend>
           <div id="colors"></div>
       </fieldset>
-    </div>
+    </div> -->
     <div id="people-legend">
       <fieldset>
           <legend>Legend</legend>
