combined color legend with subfilter

--- a/src/index.html
+++ b/src/index.html
@@ -29,12 +29,12 @@
         <fieldset>
             <legend>Subfilters</legend>
             <input type="checkbox" class="subfilter-gender" id="male" checked>
-            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#4682b4"/></svg>
+            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#4682b4"/></svg>
             <label for="male">Male</label>            
             <br/> 
 
             <input type="checkbox" class="subfilter-gender" id="female" checked>
-            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#db7093"/></svg>
+            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#db7093"/></svg>
             <label for="female">Female</label>            
             <br/>
         </fieldset>
@@ -43,17 +43,17 @@
         <fieldset>
             <legend>Subfilters</legend>
             <input type="checkbox" class="subfilter-age" id="age0-14" checked>
-            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#9e6ebd"/></svg>
+            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#9e6ebd"/></svg>
             <label for="age0-14">Ages 0-14</label>
             <br/>
 
             <input type="checkbox" class="subfilter-age" id="age15-44" checked>
-            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#7aa457"/></svg>
+            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#7aa457"/></svg>
             <label for="age15-44">Ages 15-44</label>
             <br/>
 
             <input type="checkbox" class="subfilter-age" id="age44-and-up" checked>
-            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#cb6751"/></svg>
+            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#cb6751"/></svg>
             <label for="age44-and-up">Ages 44+</label>            
             <br/>
         </fieldset>
@@ -62,27 +62,22 @@
         <fieldset>
             <legend>Subfilters</legend>
             <input type="checkbox" class="subfilter-country" id="guinea" checked>
-            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#ffa600"/></svg>
+            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#ffa600"/></svg>
             <label for="guinea">Guinea</label>            
             <br/>
 
             <input type="checkbox" class="subfilter-country" id="liberia" checked>
-            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#bc5090"/></svg>
+            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#bc5090"/></svg>
             <label for="liberia">Liberia</label>            
             <br/>
 
             <input type="checkbox" class="subfilter-country" id="sierraLeone" checked>
-            <svg height="23" width="22"><circle cx="12" cy="15" r="8" fill="#374c80"/></svg>
+            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#374c80"/></svg>
             <label for="sierraLeone">Sierra Leone</label>
             <br/>
         </fieldset>
     </div>
-    <!-- <div id="color-legend">
-      <fieldset>
-          <legend>Color Legend</legend>
-          <div id="colors"></div>
-      </fieldset>
-    </div> -->
+    
     <div id="people-legend">
       <fieldset>
           <legend>Legend</legend>
