Fixed positioning of filters

--- a/src/index.html
+++ b/src/index.html
@@ -26,21 +26,21 @@
         </fieldset>
     </div>
     <div id="subfilter-gender">
-        <fieldset>
+        <fieldset class="sub-fieldset">
             <legend>Subfilters</legend>
             <input type="checkbox" class="subfilter-gender" id="male" checked>
             <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#4682b4"/></svg>
-            <label for="male">Male</label>            
-            <br/> 
+            <label for="male">Male</label>
+            <br/>
 
             <input type="checkbox" class="subfilter-gender" id="female" checked>
             <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#db7093"/></svg>
-            <label for="female">Female</label>            
+            <label for="female">Female</label>
             <br/>
         </fieldset>
     </div>
     <div id="subfilter-age">
-        <fieldset>
+        <fieldset class="sub-fieldset">
             <legend>Subfilters</legend>
             <input type="checkbox" class="subfilter-age" id="age0-14" checked>
             <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#9e6ebd"/></svg>
@@ -54,21 +54,21 @@
 
             <input type="checkbox" class="subfilter-age" id="age44-and-up" checked>
             <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#cb6751"/></svg>
-            <label for="age44-and-up">Ages 44+</label>            
+            <label for="age44-and-up">Ages 44+</label>
             <br/>
         </fieldset>
     </div>
     <div id="subfilter-country">
-        <fieldset>
+        <fieldset class="sub-fieldset">
             <legend>Subfilters</legend>
             <input type="checkbox" class="subfilter-country" id="guinea" checked>
             <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#ffa600"/></svg>
-            <label for="guinea">Guinea</label>            
+            <label for="guinea">Guinea</label>
             <br/>
 
             <input type="checkbox" class="subfilter-country" id="liberia" checked>
             <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#bc5090"/></svg>
-            <label for="liberia">Liberia</label>            
+            <label for="liberia">Liberia</label>
             <br/>
 
             <input type="checkbox" class="subfilter-country" id="sierraLeone" checked>
@@ -77,7 +77,7 @@
             <br/>
         </fieldset>
     </div>
-    
+
     <div id="people-legend">
       <fieldset>
           <legend>Legend</legend>
