--- a/src/index.html
+++ b/src/index.html
@@ -29,13 +29,13 @@
         <fieldset class="sub-fieldset">
             <legend>Subfilters</legend>
             <input type="checkbox" class="subfilter-gender" id="male" checked>
-            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#4682b4"/></svg>
             <label for="male">Male</label>
+            <span class="dot" style="background-color: #4682b4"></span>
             <br/>
 
             <input type="checkbox" class="subfilter-gender" id="female" checked>
-            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#db7093"/></svg>
             <label for="female">Female</label>
+            <span class="dot" style="background-color: #db7093"></span>
             <br/>
         </fieldset>
     </div>
@@ -43,18 +43,18 @@
         <fieldset class="sub-fieldset">
             <legend>Subfilters</legend>
             <input type="checkbox" class="subfilter-age" id="age0-14" checked>
-            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#9e6ebd"/></svg>
             <label for="age0-14">Ages 0-14</label>
+            <span class="dot" style="background-color: #9e6ebd"></span>
             <br/>
 
             <input type="checkbox" class="subfilter-age" id="age15-44" checked>
-            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#7aa457"/></svg>
             <label for="age15-44">Ages 15-44</label>
+            <span class="dot" style="background-color: #7aa457"></span>
             <br/>
 
             <input type="checkbox" class="subfilter-age" id="age44-and-up" checked>
-            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#cb6751"/></svg>
             <label for="age44-and-up">Ages 44+</label>
+            <span class="dot" style="background-color: #cb6751"></span>
             <br/>
         </fieldset>
     </div>
@@ -62,18 +62,18 @@
         <fieldset class="sub-fieldset">
             <legend>Subfilters</legend>
             <input type="checkbox" class="subfilter-country" id="guinea" checked>
-            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#ffa600"/></svg>
             <label for="guinea">Guinea</label>
+            <span class="dot" style="background-color: #ffa600"></span>
             <br/>
 
             <input type="checkbox" class="subfilter-country" id="liberia" checked>
-            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#bc5090"/></svg>
             <label for="liberia">Liberia</label>
+            <span class="dot" style="background-color: #bc5090"></span>
             <br/>
 
             <input type="checkbox" class="subfilter-country" id="sierraLeone" checked>
-            <svg height="23" width="22"><ellipse cx="12" cy="15" rx="8" ry="8" fill="#374c80"/></svg>
             <label for="sierraLeone">Sierra Leone</label>
+            <span class="dot" style="background-color: #374c80"></span>
             <br/>
         </fieldset>
     </div>
@@ -82,16 +82,12 @@
       <fieldset>
           <legend>Legend</legend>
           <div>
-              <svg height="25" width="22">
-                  <ellipse cx="10" cy="16" rx="8" ry="8" stroke="black" fill="white" />
-              </svg>
-              <div style="display: inline">100 people</div>
+              <span class="dot" style="background-color: white; border: 1px solid black;"></span>
+              <span class="legend-label">100 people</span>
           </div>
-          <div>
-              <svg height="24" width="22">
-                  <circle cx="10" cy="16" r="8" fill="gray" />
-              </svg>
-              <div style="display: inline">Unknown data</div>
+          <div style="margin-top: 30px">
+              <span class="dot" style="background-color: gray"></span>
+              <span class="legend-label">Unknown data</span>
           </div>
       </fieldset>
     </div>
