--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
     <div class="visual">
         <h1>The Ebola Virus</h1>
     </div>
-    <div id="summary">
-        <h3>The ebola virus is a deadly disease that spreads through contact between infected humans and animals. <br> <br>Frequency of new cases of Ebola peaked in late 2014, and have been declineing since due to improved outbreak control. <br> <br> Examine the demographics of ebola cases in countries with intense transmission between 2014-2016 </h3>
+    <div id="summary"> 
+        <h3>Description</h3>
+        <p>The ebola virus is a deadly disease that spreads through contact between infected humans and animals. <br> <br>Frequency of new cases of Ebola peaked in late 2014, and have been declineing since due to improved outbreak control. <br> <br> Examine the demographics of ebola cases in countries with intense transmission between 2014-2016 </p>
     </div>
     <div id="filters">
         <fieldset>
