--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,8 @@
     <div class="visual">
         <h1>The Ebola Virus</h1>
     </div>
-    <div id="summary"> 
-        <h3>Description</h3>
-        <p>The ebola virus is a deadly disease that spreads through contact between infected humans and animals. <br> <br>Frequency of new cases of Ebola peaked in late 2014, and have been declineing since due to improved outbreak control. <br> <br> Examine the demographics of ebola cases in countries with intense transmission between 2014-2016 </p>
+    <div id="summary">
+        <p>The ebola virus is a deadly disease that spreads through contact between infected humans and animals. <br> <br>Frequency of new cases of Ebola peaked in late 2014, and have been declining since due to improved outbreak control. <br> <br> Examine the demographics of ebola cases in countries with intense transmission between 2014-2016. </p>
     </div>
     <div id="filters">
         <fieldset>
@@ -100,6 +99,7 @@
             <legend>percent</legend>
         </fieldset>
     </div>
+    <div id="numOfPeople"></div>
     <script src="./index.js"></script>
   </body>
 </html>
