--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <h1>The Ebola Epidemic</h1>
     </div>
     <div id="summary">
-        <p>The ebola virus is a deadly disease that spreads through contact between infected humans and animals. <br> <br>Frequency of new cases of Ebola peaked in late 2014, and have been declining since due to improved outbreak control. <br> <br> Examine the demographics of <b> comfirmed ebola cases </b> in countries with intense transmission between 2014-2016. <br> <br><br> <br> Data sourced from World Health Organization </p>
+        <p>The ebola virus is a deadly disease that spreads through contact between infected humans and animals. <br> <br>Frequency of new cases of Ebola peaked in late 2014, and have been declining since due to improved outbreak control. <br> <br> Examine the demographics of <b> confirmed ebola cases </b> in countries with intense transmission between 2014-2016 by using the filters and/or by hovering over the data. <br> <br> <br> Data sourced from World Health Organization </p>
     </div>
     <div id="filters">
         <fieldset>
